--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <link rel="icon" href="favicon-32x32.png">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
 <body>
