--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,14 +5,13 @@
     </head>
 <body>
 <h1 class="code-line" data-line-start=0 data-line-end=1 ><a id="Formula1API_0"></a>Formula1-API</h1>
-<p class="has-line-data" data-line-start="2" data-line-end="5"><a href="https://github.com/isvora/Formula1-API"><img src="https://i.imgur.com/VWjw3cL.png" alt=""></a><br>
-    Welcome to the Formula1-API created in Java with the help of Spring Boot.<br>
+<p class="has-line-data" data-line-start="2" data-line-end="3"><a href="https://github.com/isvora/Formula1-API"><img src="https://i.imgur.com/VWjw3cL.png" alt=""></a></p>
+<p class="has-line-data" data-line-start="4" data-line-end="6">Welcome to the Formula1-API created in Java with the help of Spring Boot.<br>
     The data is provided for free from Vopani and hosted on the Kaggle website. You can check it out here: <a href="https://www.kaggle.com/rohanrao/formula-1-world-championship-1950-2020">https://www.kaggle.com/rohanrao/formula-1-world-championship-1950-2020</a></p>
-<p class="has-line-data" data-line-start="6" data-line-end="7">Head over to the docs section to get started</p>
-<h1 class="code-line" data-line-start=8 data-line-end=9 ><a id="Docs_8"></a>Docs</h1>
-<p class="has-line-data" data-line-start="10" data-line-end="11">Here you can find all the API calls you can make with example and responses.</p>
-<h2 class="code-line" data-line-start=12 data-line-end=13 ><a id="1_Circuits_12"></a>1 Circuits</h2>
-<p class="has-line-data" data-line-start="14" data-line-end="15">There are 9 fields in the Circuit object:</p>
+<p class="has-line-data" data-line-start="7" data-line-end="8">Head over to the docs section to get started</p>
+<h1 class="code-line" data-line-start=9 data-line-end=10 ><a id="Docs_9"></a>Docs</h1>
+<p class="has-line-data" data-line-start="11" data-line-end="12">Here you can find all the API calls you can make with example and responses.</p>
+<h2 class="code-line" data-line-start=13 data-line-end=14 ><a id="1_Circuit_13"></a>1 Circuit</h2>
 <table class="table table-striped table-bordered">
     <thead>
     <tr>
@@ -50,44 +49,44 @@
     <tr>
         <td><code>lat</code></td>
         <td><code>double</code></td>
-        <td>The Circuit latitude;</td>
+        <td>The Circuit’s latitude;</td>
     </tr>
     <tr>
         <td><code>long</code></td>
         <td><code>double</code></td>
-        <td>The Circuit longitude;</td>
+        <td>The Circuit’s longitude;</td>
     </tr>
     <tr>
         <td><code>alt</code></td>
         <td><code>double</code></td>
-        <td>The Circuit altitude;</td>
+        <td>The Circuit’s altitude;</td>
     </tr>
     <tr>
         <td><code>url</code></td>
         <td><code>String</code></td>
-        <td>An URL to the Circuit wikipedia page.</td>
+        <td>An URL to the Circuit’s wikipedia page.</td>
     </tr>
     </tbody>
 </table>
-<h3 class="code-line" data-line-start=28 data-line-end=29 ><a id="11_apicircuits_28"></a>1.1 /api/circuits</h3>
+<h3 class="code-line" data-line-start=26 data-line-end=27 ><a id="11_apicircuits_26"></a>1.1 /api/circuits</h3>
 <table class="table table-striped table-bordered">
-    <thead>
-    <tr>
-        <th>Request Type</th>
-        <th>Api Endpoint</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <td>GET</td>
-        <td>/api/circuits</td>
-    </tr>
-    </tbody>
+<thead>
+<tr>
+    <th>Request Type</th>
+    <th>Api Endpoint</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+    <td>GET</td>
+    <td>/api/circuits</td>
+</tr>
+</tbody>
 </table>
-<h4 class="code-line" data-line-start=34 data-line-end=35 ><a id="Request_34"></a>Request</h4>
-<p class="has-line-data" data-line-start="35" data-line-end="36"><code>curl --location --request GET 'https://formula1-api-demo.herokuapp.com/api/circuits'</code></p>
-<h4 class="code-line" data-line-start=37 data-line-end=38 ><a id="Response_37"></a>Response</h4>
-<pre><code class="has-line-data" data-line-start="39" data-line-end="91">&quot;_embedded&quot;: {
+<h4 class="code-line" data-line-start=32 data-line-end=33 ><a id="Request_32"></a>Request</h4>
+<p class="has-line-data" data-line-start="33" data-line-end="34"><code>curl --location --request GET 'https://formula1data-api.herokuapp.com/api/circuits'</code></p>
+<h4 class="code-line" data-line-start=35 data-line-end=36 ><a id="Response_35"></a>Response</h4>
+<pre><code class="has-line-data" data-line-start="37" data-line-end="65">&quot;_embedded&quot;: {
         &quot;circuitList&quot;: [
             {
                 &quot;id&quot;: 1,
@@ -102,45 +101,20 @@
                 &quot;_links&quot;: {
                     &quot;self&quot;: [
                         {
-                            &quot;href&quot;: &quot;https://formula1-api-demo.herokuapp.com/api/circuits/1&quot;
+                            &quot;href&quot;: &quot;https://formula1data-api.herokuapp.com/api/circuits/1&quot;
                         },
                         {
-                            &quot;href&quot;: &quot;https://formula1-api-demo.herokuapp.com/api/circuits/?ref=albert_park&quot;
+                            &quot;href&quot;: &quot;https://formula1data-apiherokuapp.com/api/circuits/?ref=albert_park&quot;
                         }
                     ],
                     &quot;circuits&quot;: {
-                        &quot;href&quot;: &quot;https://formula1-api-demo.herokuapp.com/api/circuits&quot;
-                    }
-                }
-            },
-            {
-                &quot;id&quot;: 2,
-                &quot;circuitRef&quot;: &quot;sepang&quot;,
-                &quot;name&quot;: &quot;Sepang International Circuit&quot;,
-                &quot;location&quot;: &quot;Kuala Lumpur&quot;,
-                &quot;country&quot;: &quot;Malaysia&quot;,
-                &quot;lat&quot;: 2.76083,
-                &quot;lng&quot;: 101.738,
-                &quot;alt&quot;: 18,
-                &quot;url&quot;: &quot;http://en.wikipedia.org/wiki/Sepang_International_Circuit&quot;,
-                &quot;_links&quot;: {
-                    &quot;self&quot;: [
-                        {
-                            &quot;href&quot;: &quot;https://formula1-api-demo.herokuapp.com/api/circuits/2&quot;
-                        },
-                        {
-                            &quot;href&quot;: &quot;https://formula1-api-demo.herokuapp.com/api/circuits/?ref=sepang&quot;
-                        }
-                    ],
-                    &quot;circuits&quot;: {
-                        &quot;href&quot;: &quot;https://formula1-api-demo.herokuapp.com/api/circuits&quot;
+                        &quot;href&quot;: &quot;https://formula1data-api.herokuapp.com/api/circuits&quot;
                     }
                 }
             },
         ...
 </code></pre>
-<h3 class="code-line" data-line-start=92 data-line-end=93 ><a id="12_apicircuitsid_92"></a>1.2 /api/circuits/{id}</h3>
-<p class="has-line-data" data-line-start="94" data-line-end="95">In order to retrieve a single Circuit we can pass the id of that circuit</p>
+<h3 class="code-line" data-line-start=66 data-line-end=67 ><a id="12_apicircuitsid_66"></a>1.2 /api/circuits/{id}</h3>
 <table class="table table-striped table-bordered">
     <thead>
     <tr>
@@ -155,10 +129,10 @@
     </tr>
     </tbody>
 </table>
-<h4 class="code-line" data-line-start=100 data-line-end=101 ><a id="Request_100"></a>Request</h4>
-<p class="has-line-data" data-line-start="101" data-line-end="102"><code>curl --location --request GET 'https://formula1-api-demo.herokuapp.com/api/circuits/1'</code></p>
-<h4 class="code-line" data-line-start=103 data-line-end=104 ><a id="Response_103"></a>Response</h4>
-<pre><code class="has-line-data" data-line-start="105" data-line-end="130">{
+<h4 class="code-line" data-line-start=72 data-line-end=73 ><a id="Request_72"></a>Request</h4>
+<p class="has-line-data" data-line-start="73" data-line-end="74"><code>curl --location --request GET 'https://formula1data-api.herokuapp.com/api/circuits/1'</code></p>
+<h4 class="code-line" data-line-start=75 data-line-end=76 ><a id="Response_75"></a>Response</h4>
+<pre><code class="has-line-data" data-line-start="77" data-line-end="102">{
     &quot;id&quot;: 1,
     &quot;circuitRef&quot;: &quot;albert_park&quot;,
     &quot;name&quot;: &quot;Albert Park Grand Prix Circuit&quot;,
@@ -171,17 +145,111 @@
     &quot;_links&quot;: {
         &quot;self&quot;: [
             {
-                &quot;href&quot;: &quot;https://formula1-api-demo.herokuapp.com/api/circuits/1&quot;
+                &quot;href&quot;: &quot;https://formula1data-api.herokuapp.com/api/circuits/1&quot;
             },
             {
-                &quot;href&quot;: &quot;https://formula1-api-demo.herokuapp.com/api/circuits/?ref=albert_park&quot;
+                &quot;href&quot;: &quot;https://formula1data-api.herokuapp.com/api/circuits/?ref=albert_park&quot;
             }
         ],
         &quot;circuits&quot;: {
-            &quot;href&quot;: &quot;https://formula1-api-demo.herokuapp.com/api/circuits&quot;
+            &quot;href&quot;: &quot;https://formula1data-api.com/api/circuits&quot;
         }
     }
 }
+</code></pre>
+<h3 class="code-line" data-line-start=103 data-line-end=104 ><a id="13_apicircuitsrefref_103"></a>1.3 /api/circuits/?ref={ref}</h3>
+<table class="table table-striped table-bordered">
+    <thead>
+    <tr>
+        <th>Request Type</th>
+        <th>Api Endpoint</th>
+        <th>ref</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td>GET</td>
+        <td>/api/circuits/?ref={ref}</td>
+        <td><code>circuitRef</code></td>
+    </tr>
+    </tbody>
+</table>
+<h4 class="code-line" data-line-start=109 data-line-end=110 ><a id="Request_109"></a>Request</h4>
+<p class="has-line-data" data-line-start="110" data-line-end="111"><code>curl --location --request GET 'https://formula1data-api.herokuapp.com/api/circuits/?ref=albert_park'</code></p>
+<h4 class="code-line" data-line-start=112 data-line-end=113 ><a id="Response_112"></a>Response</h4>
+<pre><code class="has-line-data" data-line-start="114" data-line-end="139">{
+    &quot;id&quot;: 1,
+    &quot;circuitRef&quot;: &quot;albert_park&quot;,
+    &quot;name&quot;: &quot;Albert Park Grand Prix Circuit&quot;,
+    &quot;location&quot;: &quot;Melbourne&quot;,
+    &quot;country&quot;: &quot;Australia&quot;,
+    &quot;lat&quot;: -37.8497,
+    &quot;lng&quot;: 144.968,
+    &quot;alt&quot;: 10,
+    &quot;url&quot;: &quot;http://en.wikipedia.org/wiki/Melbourne_Grand_Prix_Circuit&quot;,
+    &quot;_links&quot;: {
+        &quot;self&quot;: [
+            {
+                &quot;href&quot;: &quot;https://formula1data-api.herokuapp.com/api/circuits/1&quot;
+            },
+            {
+                &quot;href&quot;: &quot;https://formula1data-api.herokuapp.com/api/circuits/?ref=albert_park&quot;
+            }
+        ],
+        &quot;circuits&quot;: {
+            &quot;href&quot;: &quot;https://formula1data-api.herokuapp.com/api/circuits&quot;
+        }
+    }
+}
+</code></pre>
+<h3 class="code-line" data-line-start=140 data-line-end=141 ><a id="14_apicircuitscountrycountry_140"></a>1.4 /api/circuits/country/{country}</h3>
+<table class="table table-striped table-bordered">
+    <thead>
+    <tr>
+        <th>Request Type</th>
+        <th>Api Endpoint</th>
+        <th>country</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td>GET</td>
+        <td>/api/circuits/country/{country}</td>
+        <td><code>country</code></td>
+    </tr>
+    </tbody>
+</table>
+<h4 class="code-line" data-line-start=146 data-line-end=147 ><a id="Request_146"></a>Request</h4>
+<p class="has-line-data" data-line-start="147" data-line-end="148"><code>curl --location --request GET 'https://formula1data-api.herokuapp.com/api/circuits/country/Germany'</code></p>
+<h4 class="code-line" data-line-start=149 data-line-end=150 ><a id="Response_149"></a>Response</h4>
+<pre><code class="has-line-data" data-line-start="151" data-line-end="180">{
+    &quot;_embedded&quot;: {
+        &quot;circuitList&quot;: [
+            {
+                &quot;id&quot;: 10,
+                &quot;circuitRef&quot;: &quot;hockenheimring&quot;,
+                &quot;name&quot;: &quot;Hockenheimring&quot;,
+                &quot;location&quot;: &quot;Hockenheim&quot;,
+                &quot;country&quot;: &quot;Germany&quot;,
+                &quot;lat&quot;: 49.3278,
+                &quot;lng&quot;: 8.56583,
+                &quot;alt&quot;: 103,
+                &quot;url&quot;: &quot;http://en.wikipedia.org/wiki/Hockenheimring&quot;,
+                &quot;_links&quot;: {
+                    &quot;self&quot;: [
+                        {
+                            &quot;href&quot;: &quot;https://formula1data-api.herokuapp.com/api/circuits/10&quot;
+                        },
+                        {
+                            &quot;href&quot;: &quot;https://formula1data-api.herokuapp.com/api/circuits/?ref=hockenheimring&quot;
+                        }
+                    ],
+                    &quot;circuits&quot;: {
+                        &quot;href&quot;: &quot;https://formula1data-api.herokuapp.com/api/circuits&quot;
+                    }
+                }
+            },
+    ...
 </code></pre>
 
 <style type='text/css'>body {
