Fixed /api/constructors/nationality request link

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -443,7 +443,7 @@
     </tbody>
 </table>
 <h4 class="code-line" data-line-start=308 data-line-end=309 ><a id="Request_308"></a>Request</h4>
-<p class="has-line-data" data-line-start="309" data-line-end="310"><code>https://formula1data-api.herokuapp.com/api/constructors/nationality/British</code></p>
+<p class="has-line-data" data-line-start="309" data-line-end="310"><code>curl --location --request GET 'https://formula1data-api.herokuapp.com/api/constructors/nationality/British'</code></p>
 <h4 class="code-line" data-line-start=311 data-line-end=312 ><a id="Response_311"></a>Response</h4>
 <pre><code class="has-line-data" data-line-start="313" data-line-end="338">{
     &quot;_embedded&quot;: {
