--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -19,6 +19,12 @@
 <h5 class="code-line" data-line-start=16 data-line-end=17 ><a id="22_apiconstructorsconstructorId_16" href="#22_apiconstructosconstructorId_236">&emsp;2.2 /api/constructors/{constructorId}</a></h5>
 <h5 class="code-line" data-line-start=17 data-line-end=18 ><a id="23_apiconstructorsrefconstructorRef_17" href="#23_apiconstructosrefconstructorRef_269">&emsp;2.3 /api/constructors/?ref={constructorRef}</a></h5>
 <h5 class="code-line" data-line-start=18 data-line-end=19 ><a id="24_apiconstructorsnationalitynationality_18" href="#24_apiconstructorsnationalitynationality_302">&emsp;2.4 /api/constructors/nationality/{nationality}</a></h5>
+<h3 class="code-line" data-line-start=19 data-line-end=20 ><a id="3_ConstructorResults_19" href="#3_ConstructorResults_349">3 ConstructorResults</a></h3>
+<h5 class="code-line" data-line-start=20 data-line-end=21 ><a id="31_apiconstructorresults_20" href="#31_apiconstructorresults_359">&emsp;3.1 /api/constructor-results</a></h5>
+<h5 class="code-line" data-line-start=21 data-line-end=22 ><a id="32_apiconstructorresultsid_21" href="#32_apiconstructorresultsconstructorResultsId_391">&emsp;3.2 /api/constructor-results/{id}</a></h5>
+<h5 class="code-line" data-line-start=22 data-line-end=23 ><a id="33_apiconstructorresultsraceraceId_22" href="#33_apiconstructorresultsraceraceId_419">&emsp;3.3 /api/constructor-results/race/{raceId}</a></h5>
+<h5 class="code-line" data-line-start=23 data-line-end=24 ><a id="34_apiconstructorresultsconstructorconstructorId_23" href="#34_apiconstructorresultsconstructorconstructorId_451">&emsp;3.4 /api/constructor-results/constructor/{constructorId}</a></h5>
+<h5 class="code-line" data-line-start=24 data-line-end=25 ><a id="35_apiconstructorresultsmostwins_24" href="#35_apiconstructorresultsmostwins_483">&emsp;3.5 /api/constructor-results/most-wins</a></h5>
 <br/>
 <h1 class="code-line" data-line-start=15 data-line-end=16 ><a id="Docs_15"></a>Docs</h1>
 <p class="has-line-data" data-line-start="17" data-line-end="18">Here you can find all the requests with examples</p>
@@ -85,12 +91,14 @@
 <tr>
     <th>Request Type</th>
     <th>Api Endpoint</th>
+    <th>Description</th>
 </tr>
 </thead>
 <tbody>
 <tr>
     <td>GET</td>
     <td>/api/circuits</td>
+    <td>Get all circuits</td>
 </tr>
 </tbody>
 </table>
@@ -131,12 +139,14 @@
     <tr>
         <th>Request Type</th>
         <th>Api Endpoint</th>
+        <th>Description</th>
     </tr>
     </thead>
     <tbody>
     <tr>
         <td>GET</td>
         <td>/api/circuits/{id}</td>
+        <td>Get a circuit based on their <code>id</code></td>
     </tr>
     </tbody>
 </table>
@@ -174,14 +184,14 @@
     <tr>
         <th>Request Type</th>
         <th>Api Endpoint</th>
-        <th>ref</th>
+        <th>Description</th>
     </tr>
     </thead>
     <tbody>
     <tr>
         <td>GET</td>
         <td>/api/circuits/?ref={ref}</td>
-        <td><code>circuitRef</code></td>
+        <td>Get a circuits based on their <code>circuitRef</code></td>
     </tr>
     </tbody>
 </table>
@@ -219,14 +229,14 @@
     <tr>
         <th>Request Type</th>
         <th>Api Endpoint</th>
-        <th>country</th>
+        <th>Description</th>
     </tr>
     </thead>
     <tbody>
     <tr>
         <td>GET</td>
         <td>/api/circuits/country/{country}</td>
-        <td><code>country</code></td>
+        <td>Get all circuits based on their <code>country</code></td>
     </tr>
     </tbody>
 </table>
@@ -306,17 +316,19 @@
     <tr>
         <th>Request Type</th>
         <th>Api Endpoint</th>
+        <th>Description</th>
     </tr>
     </thead>
     <tbody>
     <tr>
         <td>GET</td>
         <td>/api/constructos</td>
+        <td>Get a all constructors</td>
     </tr>
     </tbody>
 </table>
 <h4 class="code-line" data-line-start=205 data-line-end=206 ><a id="Request_205"></a>Request</h4>
-<p class="has-line-data" data-line-start="206" data-line-end="207"><code>curl --request GET 'https://formula1data-api.herokuapp.com/api/constructors'</code></p>
+<p class="has-line-data" data-line-start="206" data-line-end="207"><code>curl --location --request GET 'https://formula1data-api.herokuapp.com/api/constructors'</code></p>
 <h4 class="code-line" data-line-start=208 data-line-end=209 ><a id="Response_208"></a>Response</h4>
 <pre><code class="has-line-data" data-line-start="210" data-line-end="235">{
     &quot;_embedded&quot;: {
@@ -349,14 +361,14 @@
     <tr>
         <th>Request Type</th>
         <th>Api Endpoint</th>
-        <th>constructorId</th>
+        <th>Description</th>
     </tr>
     </thead>
     <tbody>
     <tr>
         <td>GET</td>
         <td>/api/constructos/{constructorId}</td>
-        <td><code>constructorId</code></td>
+        <td>Get a constructor based on their <code>constructorId</code></td>
     </tr>
     </tbody>
 </table>
@@ -390,14 +402,14 @@
     <tr>
         <th>Request Type</th>
         <th>Api Endpoint</th>
-        <th>constructorRef</th>
+        <th>Description</th>
     </tr>
     </thead>
     <tbody>
     <tr>
         <td>GET</td>
         <td>/api/constructors/?ref={constructorRef}</td>
-        <td><code>constructorRef</code></td>
+        <td>Get a constructor based on their <code>constructorRef</code></td>
     </tr>
     </tbody>
 </table>
@@ -431,14 +443,14 @@
     <tr>
         <th>Request Type</th>
         <th>Api Endpoint</th>
-        <th>nationality</th>
+        <th>Description</th>
     </tr>
     </thead>
     <tbody>
     <tr>
         <td>GET</td>
         <td>/api/constructors/nationality/{nationality}</td>
-        <td><code>nationality</code></td>
+        <td>Get all constructors based on their <code>nationality</code></td>
     </tr>
     </tbody>
 </table>
@@ -471,7 +483,238 @@
     ...
 </code></pre>
 
-<style type='text/css'>body {
+<h2 class="code-line" data-line-start=349 data-line-end=350 ><a id="3_ConstructorResults_349"></a>3 ConstructorResults</h2>
+<table class="table table-striped table-bordered">
+<thead>
+<tr>
+<th>Name</th>
+<th>Type</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td><code>constructorResultsId</code></td>
+<td><code>Long</code></td>
+<td>The unique value to identify the ConstructorResults object.</td>
+</tr>
+<tr>
+<td><code>raceId</code></td>
+<td><code>Long</code></td>
+<td>Id for the <code>Race</code></td>
+</tr>
+<tr>
+<td><code>constructorId</code></td>
+<td><code>String</code></td>
+<td>Id for the <code>Constructor</code></td>
+</tr>
+<tr>
+<td><code>points</code></td>
+<td><code>double</code></td>
+<td>Points scored by the Constructor</td>
+</tr>
+<tr>
+<td><code>status</code></td>
+<td><code>String</code></td>
+<td>Status of the result</td>
+</tr>
+</tbody>
+</table>
+<h3 class="code-line" data-line-start=359 data-line-end=360 ><a id="31_apiconstructorresults_359"></a>3.1 /api/constructor-results</h3>
+<table class="table table-striped table-bordered">
+<thead>
+<tr>
+<th>Request Type</th>
+<th>Api Endpoint</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>GET</td>
+<td>/api/constructor-results</td>
+<td>Get all constructor results</td>
+</tr>
+</tbody>
+</table>
+<h4 class="code-line" data-line-start=365 data-line-end=366 ><a id="Request_365"></a>Request</h4>
+<p class="has-line-data" data-line-start="366" data-line-end="367"><code>curl --location --request GET 'https://formula1data-api.herokuapp.com/api/constructor-results'</code></p>
+<h4 class="code-line" data-line-start=368 data-line-end=369 ><a id="Response_368"></a>Response</h4>
+<pre><code class="has-line-data" data-line-start="370" data-line-end="390">{
+    &quot;_embedded&quot;: {
+        &quot;constructorResultsList&quot;: [
+            {
+                &quot;constructorResultsId&quot;: 33585,
+                &quot;raceId&quot;: 18,
+                &quot;constructorId&quot;: 1,
+                &quot;points&quot;: 14.0,
+                &quot;status&quot;: &quot;\\N&quot;,
+                &quot;_links&quot;: {
+                    &quot;self&quot;: {
+                        &quot;href&quot;: &quot;https://formula1data-api.herokuapp.com/api/constructor-results/33585&quot;
+                    },
+                    &quot;constructors-results&quot;: {
+                        &quot;href&quot;: &quot;https://formula1data-api.herokuapp.com/api/constructor-results&quot;
+                    }
+                }
+            },
+    ...
+</code></pre>
+<h3 class="code-line" data-line-start=391 data-line-end=392 ><a id="32_apiconstructorresultsconstructorResultsId_391"></a>3.2 /api/constructor-results/{constructorResultsId}</h3>
+<table class="table table-striped table-bordered">
+<thead>
+<tr>
+<th>Request Type</th>
+<th>Api Endpoint</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>GET</td>
+<td>/api/constructor-results/{constructorResultsId}</td>
+<td>Get a constructor results based on the <code>constructorResultId</code></td>
+</tr>
+</tbody>
+</table>
+<h4 class="code-line" data-line-start=397 data-line-end=398 ><a id="Request_397"></a>Request</h4>
+<p class="has-line-data" data-line-start="398" data-line-end="399"><code>curl --location --request GET 'https://formula1data-api.herokuapp.com/api/constructor-results/33585'</code></p>
+<h4 class="code-line" data-line-start=400 data-line-end=401 ><a id="Response_400"></a>Response</h4>
+<pre><code class="has-line-data" data-line-start="402" data-line-end="418">{
+    &quot;constructorResultsId&quot;: 33585,
+    &quot;raceId&quot;: 18,
+    &quot;constructorId&quot;: 1,
+    &quot;points&quot;: 14.0,
+    &quot;status&quot;: &quot;\\N&quot;,
+    &quot;_links&quot;: {
+        &quot;self&quot;: {
+            &quot;href&quot;: &quot;https://formula1data-api.herokuapp.com/api/constructor-results/33585&quot;
+        },
+        &quot;constructors-results&quot;: {
+            &quot;href&quot;: &quot;https://formula1data-api.herokuapp.com/api/constructor-results&quot;
+        }
+    }
+}
+</code></pre>
+<h3 class="code-line" data-line-start=419 data-line-end=420 ><a id="33_apiconstructorresultsraceraceId_419"></a>3.3 /api/constructor-results/race/{raceId}</h3>
+<table class="table table-striped table-bordered">
+<thead>
+<tr>
+<th>Request Type</th>
+<th>Api Endpoint</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>GET</td>
+<td>/api/constructor-results/race/{raceId}</td>
+<td>Get all constructor results for a specific Race based on a <code>raceId</code></td>
+</tr>
+</tbody>
+</table>
+<h4 class="code-line" data-line-start=425 data-line-end=426 ><a id="Request_425"></a>Request</h4>
+<p class="has-line-data" data-line-start="426" data-line-end="427"><code>curl --location --request GET 'https://formula1data-api.herokuapp.com/api/constructor-results/race/18'</code></p>
+<h4 class="code-line" data-line-start=428 data-line-end=429 ><a id="Response_428"></a>Response</h4>
+<pre><code class="has-line-data" data-line-start="430" data-line-end="450">{
+    &quot;_embedded&quot;: {
+        &quot;constructorResultsList&quot;: [
+            {
+                &quot;constructorResultsId&quot;: 33585,
+                &quot;raceId&quot;: 18,
+                &quot;constructorId&quot;: 1,
+                &quot;points&quot;: 14.0,
+                &quot;status&quot;: &quot;\\N&quot;,
+                &quot;_links&quot;: {
+                    &quot;self&quot;: {
+                        &quot;href&quot;: &quot;https://formula1data-api.herokuapp.com/api/constructor-results/33585&quot;
+                    },
+                    &quot;constructors-results&quot;: {
+                        &quot;href&quot;: &quot;https://formula1data-api.herokuapp.com/api/constructor-results&quot;
+                    }
+                }
+            },
+        ....
+</code></pre>
+<h3 class="code-line" data-line-start=451 data-line-end=452 ><a id="34_apiconstructorresultsconstructorconstructorId_451"></a>3.4 /api/constructor-results/constructor/{constructorId}</h3>
+<table class="table table-striped table-bordered">
+<thead>
+<tr>
+<th>Request Type</th>
+<th>Api Endpoint</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>GET</td>
+<td>/api/constructor-results/constructor/{constructorId}</td>
+<td>Get all constructor results for a specific Constructor based on a <code>constructorId</code></td>
+</tr>
+</tbody>
+</table>
+<h4 class="code-line" data-line-start=457 data-line-end=458 ><a id="Request_457"></a>Request</h4>
+<p class="has-line-data" data-line-start="458" data-line-end="459"><code>curl --location --request GET 'https://formula1data-api.herokuapp.com/api/constructor-results/constructor/1'</code></p>
+<h4 class="code-line" data-line-start=460 data-line-end=461 ><a id="Response_460"></a>Response</h4>
+<pre><code class="has-line-data" data-line-start="462" data-line-end="482">{
+    &quot;_embedded&quot;: {
+        &quot;constructorResultsList&quot;: [
+            {
+                &quot;constructorResultsId&quot;: 33585,
+                &quot;raceId&quot;: 18,
+                &quot;constructorId&quot;: 1,
+                &quot;points&quot;: 14.0,
+                &quot;status&quot;: &quot;\\N&quot;,
+                &quot;_links&quot;: {
+                    &quot;self&quot;: {
+                        &quot;href&quot;: &quot;https://formula1data-api.herokuapp.com/api/constructor-results/33585&quot;
+                    },
+                    &quot;constructors-results&quot;: {
+                        &quot;href&quot;: &quot;https://formula1data-api.herokuapp.com/api/constructor-results&quot;
+                    }
+                }
+            },
+        ....
+</code></pre>
+<h3 class="code-line" data-line-start=483 data-line-end=484 ><a id="35_apiconstructorresultsmostwins_483"></a>3.5 /api/constructor-results/most-wins</h3>
+<table class="table table-striped table-bordered">
+<thead>
+<tr>
+<th>Request Type</th>
+<th>Api Endpoint</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>GET</td>
+<td>/api/constructor-results/most-wins</td>
+<td>Get the constructor result with the most wins</td>
+</tr>
+</tbody>
+</table>
+<h4 class="code-line" data-line-start=489 data-line-end=490 ><a id="Request_489"></a>Request</h4>
+<p class="has-line-data" data-line-start="490" data-line-end="491"><code>curl --location --request GET 'https://formula1data-api.herokuapp.com/api/constructor-results/most-wins'</code></p>
+<h4 class="code-line" data-line-start=492 data-line-end=493 ><a id="Response_492"></a>Response</h4>
+<pre><code class="has-line-data" data-line-start="494" data-line-end="510">{
+    &quot;constructorResultsId&quot;: 44092,
+    &quot;raceId&quot;: 918,
+    &quot;constructorId&quot;: 3,
+    &quot;points&quot;: 66.0,
+    &quot;status&quot;: &quot;\\N&quot;,
+    &quot;_links&quot;: {
+        &quot;self&quot;: {
+            &quot;href&quot;: &quot;https://formula1data-api.herokuapp.com/api/constructor-results/44092&quot;
+        },
+        &quot;constructors-results&quot;: {
+            &quot;href&quot;: &quot;https://formula1data-api.herokuapp.com/api/constructor-results&quot;
+        }
+    }
+}
+</code></pre>
+
+<style type='text/css'>
+body {
   font: 400 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #111;
   background-color: #fdfdfd;
