--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="icon" href="favicon-32x32.png">\
+        <link rel="icon" href="favicon-32x32.png">
         <link rel="stylesheet" href="style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
